explore funtionality wokring

--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -24,7 +24,7 @@
                 {% if user.is_authenticated %}
   
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'search' %}">Search</a>
+                        <a class="nav-link" href="{% url 'search' %}">Explore</a>
                     </li>
     
                     <li class="nav-item">
