--- a/auctions/templates/auctions/search.html
+++ b/auctions/templates/auctions/search.html
@@ -1,48 +1,38 @@
 {% extends "auctions/layout.html" %}
+{%load static%}
 
 
 {% block body %}
 
+<div class="container mt-4">
+  <div class="d-flex flex-wrap">
+      {% for category in categories %}
+      <div class="card mb-3 mx-2" style="width: 10rem; border-radius: 10px; overflow: hidden; cursor: pointer;" onclick="submitForm('{{ category }}')">
+          <img class="card-img-top" src="{% static 'auctions/' %}{{ category }}.jpg" alt="{{ category }}" style="border-radius: 10px 10px 0 0; height: 150px; object-fit: cover;">
+          <div class="card-body d-flex align-items-center justify-content-center">
+              <h6 class="card-title" style="font-size: 1rem;">{{ category }}</h6>
+          </div>
+          <form class="categoryForm" action="{% url 'results' %}" method="POST" style="display: none;">
+              {% csrf_token %}
+              <input type="hidden" name="category" value="{{ category }}">
+          </form>
+      </div>
+      {% endfor %}
+  </div>
+</div>
 
-<form action="results" method="POST">
-    {% csrf_token %} 
-    <label for="cars">Choose a listing catagory:</label>
-    <select name="catagory" id="catagory">
-        <option value="Appliances">Appliances</option>
-        <option value="Apps & Games">Apps & Games</option>
-        <option value="Arts, Crafts, & Sewing">Arts, Crafts, & Sewing</option>
-        <option value="Automotive Parts & Accessories">Automotive Parts & Accessories</option>
-        <option value="Baby">Baby</option>
-        <option value="Beauty & Personal Care">Beauty & Personal Care</option>
-        <option value="Books">Books</option>
-        <option value="CDs & Vinyl">CDs & Vinyl</option>
-        <option value="Cell Phones & Accessories">Cell Phones & Accessories</option>
-        <option value="Clothing, Shoes and Jewelry">Clothing, Shoes and Jewelry</option>
-        <option value="Collectibles & Fine Art">Collectibles & Fine Art</option>
-        <option value="Computers">Computers</option>
-        <option value="Electronics">Electronics</option>
-        <option value="Garden & Outdoor">Garden & Outdoor</option>
-        <option value="Grocery & Gourmet Food">Grocery & Gourmet Food</option>
-        <option value="Handmade">Handmade</option>
-        <option value="Health, Household & Baby Care">Health, Household & Baby Care</option>
-        <option value="Home & Kitchen">Home & Kitchen</option>
-        <option value="Industrial & Scientific">Industrial & Scientific</option>
-        <option value="Kindle">Kindle</option>
-        <option value="Luggage & Travel Gear">Luggage & Travel Gear</option>
-        <option value="Movies & TV">Movies & TV</option>
-        <option value="Musical Instruments">Musical Instruments</option>
-        <option value="Office Products">Office Products</option>
-        <option value="Pet Supplies">Pet Supplies</option>
-        <option value="Sports & Outdoors">Sports & Outdoors</option>
-        <option value="Tools & Home Improvement">Tools & Home Improvement</option>
-        <option value="Toys & Games">Toys & Games</option>
-        <option value="Video Games">Video Games</option>
-       
-    </select>
-    <br><br>
-    <input type="submit" value="Search">
-  </form>
-   
+
+
+
+
+
+
+<script>
+  function submitForm(category) {
+      document.querySelector('.categoryForm').id = 'categoryForm_' + category;
+      document.getElementById('categoryForm_' + category).submit();
+  }
+</script>
 
 
 
