--- a/auctions/templates/auctions/search.html
+++ b/auctions/templates/auctions/search.html
@@ -1,39 +1,29 @@
 {% extends "auctions/layout.html" %}
-{%load static%}
-
+{% load static %}
 
 {% block body %}
 
 <div class="container mt-4">
   <div class="d-flex flex-wrap">
-      {% for category in categories %}
+    {% for category in categories %}
       <div class="card mb-3 mx-2" style="width: 10rem; border-radius: 10px; overflow: hidden; cursor: pointer;" onclick="submitForm('{{ category }}')">
           <img class="card-img-top" src="{% static 'auctions/' %}{{ category }}.jpg" alt="{{ category }}" style="border-radius: 10px 10px 0 0; height: 150px; object-fit: cover;">
           <div class="card-body d-flex align-items-center justify-content-center">
               <h6 class="card-title" style="font-size: 1rem;">{{ category }}</h6>
           </div>
-          <form class="categoryForm" action="{% url 'results' %}" method="POST" style="display: none;">
+          <form class="categoryForm" id="categoryForm_{{ category }}" action="{% url 'results' %}" method="POST" style="display: none;">
               {% csrf_token %}
               <input type="hidden" name="category" value="{{ category }}">
           </form>
       </div>
-      {% endfor %}
+    {% endfor %}
   </div>
 </div>
 
-
-
-
-
-
-
 <script>
   function submitForm(category) {
-      document.querySelector('.categoryForm').id = 'categoryForm_' + category;
       document.getElementById('categoryForm_' + category).submit();
   }
 </script>
-
-
 
 {% endblock %}
