--- a/auctions/templates/auctions/test.html
+++ b/auctions/templates/auctions/test.html
@@ -4,97 +4,37 @@
 
 {% block body %}
 
-{{closed_ind}}
-
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}><h5>{{ message }}</h5></li>
-    {% endfor %}
-</ul>
-{% endif %}
-
-
-{% if closed_ind %}
-
-<h2 style="color:red">This bidding has been closed</h2>
-
+{% if no_results %}
+<h2>No Listings Found</h2>
 {% else %}
+    
 
-<h2>Active Listings</h2>
-{% endif %}
+ {%  for listing in listings  %}
 
 <div style="text-align:center">
 
+<h4>Listing: {{listing.title}}</h4> 
+<br>
+<img src= {{listing.url}} alt="Image Not Available" width="225" height="150">
+<br>
+<h3>Price: ${{listing.price}}  </h4>
+<br>
+
+<form action="{% url 'listing_details' listingid=listing.id %}" method="POST">
     {% csrf_token %}
-  
-<h4 style="color:green">Listing Name: {{title}}</h4> 
-<br><br>
-<h4 style="color:green">Listing Price: ${{price}}</h4> 
-<br><br>
-
-<h4 style="color:green">Total Bids Placed: {{totalbids}}</h4> 
-
-{% if user.is_authenticated and not watch_ind  and not closed_ind %}
-
-<form action="remove_from_watchlist" method="POST">
-    {% csrf_token %} 
-<input type="hidden"  name="id_lst" value={{msg}}>
-
-<button type="submit" name="watchlist_remove"  value ="Remove">Remove From Watchlist</button>
-
+    <button name="view_details" type="submit" value={{listing.id}}>Detials</button>
 </form>
-
-{% endif %}
-
-
-{% if closed_ind %}
-
-<h4 style="color:green">Your Bid Value: ${{bid_won_price}}</h4>
-{% endif %}
-
-
-
-{% if user.is_authenticated and not closed_ind and watch_ind %}
-
-<form action="add_to_watchlist" method="POST" id="form1">
-    {% csrf_token %} 
-    <input type="hidden"  name="lst_id" value={{msg}}>
-
-</form>
-<button type="submit" name="watchlist" form="form1">Add to Watchlist</button>
-    
-{% endif %}
-
-
-
-
-{% if user.is_authenticated and not owner_ind %}
-<form action="{% url 'posted' %}" method="POST">  
-    {% csrf_token %}   
-    <label for="bid"> <h4>Place a Bid</h4> </label>
-    <input type="hidden"  name="lstId" value={{msg}}>
-    <input type="number" step="0.01" id="placebid" name = "bid">
-    <input type="submit"  value ="Submit">
- </form>
-
- {% endif %}
-
- <br>
-
-<img src= {{url}} alt="Image Not Available" >
-<br><br>
-
-
-<h4 style="color:green">Discription: {{description}}</h4> 
 
 
 </div>
+<br>
 
-{%  for comment in comments %}
+    {% endfor %}
+{% endif %}
 
-<h4>{{comment.comment}} by {{comment.user.username}}</h4> 
-
-{% endfor %}
 
 {% endblock %}
+
+
+
+
