--- a/auctions/templates/auctions/test.html
+++ b/auctions/templates/auctions/test.html
@@ -4,8 +4,23 @@
 
 {% block body %}
 
+{% if result_ind %}
+
+<h2 style="color:blue">Search Results</h2>
+
+{% else %}
+<h2 style="color:blue">Active Listings</h2>
+
+
+{% endif %}
+
 {% if no_results %}
+
+
 <h2>No Listings Found</h2>
+
+
+
 {% else %}
     
 
@@ -26,15 +41,24 @@
 </form>
 
 
+
+{% if not result_ind %}
+<form action="{% url 'close_listing' %}" method="POST">
+    {% csrf_token %}
+    <button name="close_listing" type="submit" value={{listing.id}}>Close Listing</button>
+</form>
+
+{% endif %}
 </div>
 <br>
 
-    {% endfor %}
+
+
+
+
+{% endfor %}
+
+
 {% endif %}
 
-
 {% endblock %}
-
-
-
-
