--- a/auctions/templates/auctions/test.html
+++ b/auctions/templates/auctions/test.html
@@ -1,64 +1,45 @@
 {% extends "auctions/layout.html" %}
 
 
-
 {% block body %}
-
-{% if result_ind %}
-
-<h2 style="color:blue">Search Results</h2>
-
-{% else %}
-<h2 style="color:blue">Active Listings</h2>
+    <h2 style="color:blue">Your Bidding History</h2>
 
 
-{% endif %}
+{% if hist_ind %}
 
-{% if no_results %}
-
-
-<h2>No Listings Found</h2>
-
-
-
-{% else %}
-    
-
- {%  for listing in listings  %}
+ {%  for win in biddings_won  %}
 
 <div style="text-align:center">
 
-<h4>Listing: {{listing.title}}</h4> 
+
+<h4>Listing: {{win.listing.title}}</h4> 
 <br>
-<img src= {{listing.url}} alt="Image Not Available" width="225" height="150">
+<img src= {{win.listing.url}} alt="Image Not Available" width="225" height="150">
 <br>
-<h3>Price: ${{listing.price}}  </h4>
+<h3>Price: ${{win.listing.price}}  </h4>
 <br>
 
-<form action="{% url 'listing_details' listingid=listing.id %}" method="POST">
+<h3>Your Bid: ${{win.bid_value}}  </h4>
+
+<form action="{% url 'listing_details' listingid=win.listing.id %}" method="POST">  
     {% csrf_token %}
-    <button name="view_details" type="submit" value={{listing.id}}>Detials</button>
+    <button name="view_details" type="submit" value={{win.listing.id}}>Detials</button>
 </form>
 
-
-
-{% if not result_ind %}
-<form action="{% url 'close_listing' %}" method="POST">
-    {% csrf_token %}
-    <button name="close_listing" type="submit" value={{listing.id}}>Close Listing</button>
-</form>
-
-{% endif %}
 </div>
 <br>
-
-
-
-
 
 {% endfor %}
 
 
+
+
+{% else %}
+
+<h5 style="color:red">You have not placed any bid yet</h5> 
+
 {% endif %}
+
+
 
 {% endblock %}
