--- a/auctions/templates/auctions/watchlist.html
+++ b/auctions/templates/auctions/watchlist.html
@@ -4,7 +4,8 @@
 {% block body %}
 
 
-<h2 style="color:blue">Currenlty Watching</h2>
+<h2 style="color: coral;font-family:'Lucida Handwriting';text-align: center;margin-top: 10px;">
+    Currenlty Watching</h2>
 
 
 {%  for lst in listings  %}
