--- a/auctions/templates/auctions/bidding_history.html
+++ b/auctions/templates/auctions/bidding_history.html
@@ -16,7 +16,7 @@
             {%  for win in biddings_won  %}
             <div class="col">
                 <div class="card h-100">
-                    <img src="{{ placed.listing.url }}" class="card-img-top img-fluid"
+                    <img src="{{ win.listing.url }}" class="card-img-top img-fluid"
                          alt="Image Not Available" 
                          style="object-fit:contain">
                     <div class="card-body text-center">
