--- a/auctions/templates/auctions/test.html
+++ b/auctions/templates/auctions/test.html
@@ -1,44 +1,25 @@
 {% extends "auctions/layout.html" %}
 
 
+
 {% block body %}
-    <h2 style="color:blue">Your Bidding History</h2>
+    <h2>Bid Placed</h2>
 
-
-{% if hist_ind %}
-
- {%  for win in biddings_won  %}
-
+ 
 <div style="text-align:center">
 
 
-<h4>Listing: {{win.listing.title}}</h4> 
-<br>
-<img src= {{win.listing.url}} alt="Image Not Available" width="225" height="150">
-<br>
-<h3>Price: ${{win.listing.price}}  </h4>
-<br>
+<h4>Listing:{{title}}</h4> 
 
-<h3>Your Bid: ${{win.bid_value}}  </h4>
-
-<form action="{% url 'listing_details' listingid=win.listing.id %}" method="POST">  
-    {% csrf_token %}
-    <button name="view_details" type="submit" value={{win.listing.id}}>Detials</button>
-</form>
+<br>
+<img src= {{url}} alt="Image Not Available" width="225" height="150">
+<br>
+<h4>Description: </h4>  <p>{{description}} {{discription}} </p>
+<h3>Your Bid: ${{price}}</h4> 
 
 </div>
 <br>
 
-{% endfor %}
-
-
-
-
-{% else %}
-
-<h5 style="color:red">You have not placed any bid yet</h5> 
-
-{% endif %}
 
 
 
