--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -1,89 +1,123 @@
 {% load static %}
 
-
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>E-Commerce</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>E-Commerce</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<body>
-    
-    <nav class="navbar navbar-expand-md navbar-dark" style="background-color:#20B2AA">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'index' %}">E-Commerce</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-               
-                {% if user.is_authenticated %}
-  
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'search' %}">Explore</a>
-                    </li>
-    
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'new_listing' %}">New Listing</a>
-                    </li>
-    
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'my_watchlist' %}">My Watchlist</a>
-                    </li>
-    
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'user_listing' %}">My Listings</a>
-                    </li>
-                    
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'bid_history' %}"> Biddings Won</a>
-                    </li>
-    
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'bid_history_all' %}"> Biddings Placed</a>
-                    </li>
-    
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
-                    </li>
+  <body>
+    <nav
+      class="navbar navbar-expand-md navbar-dark"
+      style="background-color: #20b2aa"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'index' %}">E-Commerce</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            {% if user.is_authenticated %}
+
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'search' %}">Explore</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'new_listing' %}">New Listing</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'my_watchlist' %}"
+                >My Watchlist</a
+              >
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'user_listing' %}"
+                >My Listings</a
+              >
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'bid_history' %}">
+                Biddings Won</a
+              >
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'bid_history_all' %}">
+                Biddings Placed</a
+              >
+            </li>
+          </ul>
+
+          <ul class="navbar-nav mr-0 mb-2 mb-lg-0">
+            <li class="nav-item dropdown end-0">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
                 
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}">Log In</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'register' %}">Register</a>
-                    </li>
-                   
-                {% endif %}
-            </ul>
-          </div>
+              >
+                Signed in as <strong>{{ user.username }}</strong>
+              </a>
+              <ul class="dropdown-menu dropdown-menu-end" style="background-color: #20b2aa">
+                <li>
+                  <a class="dropdown-item" style="color: rgba(255, 255, 255, 0.55);" href="{% url 'logout' %}">Log Out</a>
+                </li>
+              </ul>
+            </li>
+        </ul>
 
-          
-                
-          {% if user.is_authenticated %}
-          <span class="navbar-text">
-            Signed in as <strong>{{ user.username }}</strong>
-          </span>  
-          {% else %}
-          <span class="navbar-text">
-            Not signed in.
-          </span>    
-          {% endif %}
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">Log In</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'register' %}">Register</a>
+            </li>
 
+            {% endif %}
+          </ul>
         </div>
-      </nav>
 
-    {% block body %}
-    {% endblock %}
+        {% if not user.is_authenticated %}
+        <span class="navbar-text"> Not signed in. </span>
+        {% endif %}
+      </div>
+    </nav>
 
+    {% block body %} {% endblock %}
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
