--- a/auctions/templates/auctions/login.html
+++ b/auctions/templates/auctions/login.html
@@ -1,24 +1,58 @@
-{% extends "auctions/layout.html" %}
+{% extends "auctions/layout.html" %} {% load static %} {% block body %}
+<link href="{% static 'auctions/styles.css' %}" rel="stylesheet" />
 
-{% block body %}
+<style>
+  body {
+    background-image: url("{% static 'auctions/background/background1.jpg' %}");
+  }
+</style>
 
-    <h2>Login</h2>
-
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
-
-    <form action="{% url 'login' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input autofocus class="form-control" type="text" name="username" placeholder="Username">
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-header">
+          <h2 class="text-center">Login</h2>
         </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Login">
-    </form>
+        <div class="card-body text-center">
+          {% if message %}
+          <div class="alert alert-info">{{ message }}</div>
+          {% endif %}
 
-    Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+          <form action="{% url 'login' %}" method="post" class="text-left">
+            {% csrf_token %}
+            <div class="form-group">
+              <input
+                autofocus
+                class="form-control mb-3"
+                type="text"
+                name="username"
+                id="username"
+                placeholder="Enter your username"
+              />
+            </div>
+            <div class="form-group">
+              <input
+                class="form-control mb-3"
+                type="password"
+                name="password"
+                id="password"
+                placeholder="Enter your password"
+              />
+            </div>
+            <button class="btn btn-primary btn-block" type="submit">
+              Login
+            </button>
+          </form>
+
+          <div class="mt-3">
+            Don't have an account?
+            <a href="{% url 'register' %}">Register here.</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
