--- a/auctions/templates/auctions/login.html
+++ b/auctions/templates/auctions/login.html
@@ -1,53 +1,53 @@
 {% extends "auctions/layout.html" %} {% load static %} {% block body %}
 <link href="{% static 'auctions/styles.css' %}" rel="stylesheet" />
 
-<style>
-  body {
-    background-image: url("{% static 'auctions/background/background1.jpg' %}");
-  }
-</style>
+<div class="container-left">
+  <!-- Your left content goes here -->
+</div>
 
-<div class="container mt-5">
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <div class="card">
-        <div class="card-header">
-          <h2 class="text-center">Login</h2>
-        </div>
-        <div class="card-body text-center">
-          {% if message %}
-          <div class="alert alert-info">{{ message }}</div>
-          {% endif %}
+<div class="container-right">
+  <div class="container mt-0">
+    <div class="row justify-content-center">
+      <div class="col-md-12">
+        <div class="card">
+          <div class="card-header">
+            <h2 class="text-center">Login</h2>
+          </div>
+          <div class="card-body text-center">
+            {% if message %}
+            <div class="alert alert-info">{{ message }}</div>
+            {% endif %}
 
-          <form action="{% url 'login' %}" method="post" class="text-left">
-            {% csrf_token %}
-            <div class="form-group">
-              <input
-                autofocus
-                class="form-control mb-3"
-                type="text"
-                name="username"
-                id="username"
-                placeholder="Enter your username"
-              />
+            <form action="{% url 'login' %}" method="post" class="text-left">
+              {% csrf_token %}
+              <div class="form-group">
+                <input
+                  autofocus
+                  class="form-control mb-3"
+                  type="text"
+                  name="username"
+                  id="username"
+                  placeholder="Enter your username"
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  class="form-control mb-3"
+                  type="password"
+                  name="password"
+                  id="password"
+                  placeholder="Enter your password"
+                />
+              </div>
+              <button class="btn btn-primary btn-block" type="submit">
+                Login
+              </button>
+            </form>
+
+            <div class="mt-3">
+              Don't have an account?
+              <a href="{% url 'register' %}">Register here.</a>
             </div>
-            <div class="form-group">
-              <input
-                class="form-control mb-3"
-                type="password"
-                name="password"
-                id="password"
-                placeholder="Enter your password"
-              />
-            </div>
-            <button class="btn btn-primary btn-block" type="submit">
-              Login
-            </button>
-          </form>
-
-          <div class="mt-3">
-            Don't have an account?
-            <a href="{% url 'register' %}">Register here.</a>
           </div>
         </div>
       </div>
